--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,6 @@ author_email = chris.butler@au1.ibm.com
 license = Apache Software License v2
 classifiers =
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     License :: OSI Approved :: Apache Software License
@@ -19,9 +18,11 @@ long_description = file: README.md
 packages = find:
 install_requires =
     mypy
-    datamodel-code-generator
+    datamodel-code-generator>=0.5.28
     ilcli
     pyyaml
+    pydantic[email]>=1.6.1
+    python-dotenv>=0.10.4
 
 [options.packages.find]
 exclude =
@@ -43,7 +44,7 @@ dev =
     wheel
     pip
     yapf
-    python-semantic-release
+    semantic-release
     flake8
     flake8-2020
     flake8-broken-line
@@ -61,7 +62,9 @@ dev =
     flake8-string-format
     flake8-use-fstring
     pep8-naming
-
+    dictdiffer
+    mdformat
+    python-dateutil
 [semantic_release]
 version_variable=trestle/__init__.py:__version__
 branch = repo-init
