--- a/.github/workflow/python-test.yml
+++ b/.github/workflow/python-test.yml
@@ -32,7 +32,15 @@ jobs:
         make code-format
     - name: Run code linting (flake8)
       run: |
-        make code-lint
+        make code-lintg
     - name: Pytest
       run: |
         make test
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - name: Create release
+        run: |
+          make release
