--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Test trestle
+name: Trestle CI
 
 
 on: [push, pull_request]
@@ -32,7 +32,7 @@ jobs:
         make code-format
     - name: Run code linting (flake8)
       run: |
-        make code-lintg
+        make code-lint
     - name: Pytest
       run: |
         make test
