--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -1,6 +1,5 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
 name: Trestle CI
 
 
@@ -36,6 +35,11 @@ jobs:
     - name: Pytest
       run: |
         make test
+    - name: Push code-cov
+      uses: codecov/codecov-action@v1
+      with: 
+        token: ${{ secrets.CODECOV_TOKEN }}
+        file:
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -44,3 +48,5 @@ jobs:
       - name: Create release
         run: |
           make release
+
+  codeco:
