Updated github actions to pull pypi secret
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -46,5 +46,8 @@ jobs:
     if: github.ref == 'refs/heads/master'
     steps:
       - name: Create release
+        shell: bash
+        env:
+          PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
         run: |
           make release
