Corrected semantic release library
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,7 +44,7 @@ dev =
     wheel
     pip
     yapf
-    semantic-release
+    python-semantic-release
     flake8
     flake8-2020
     flake8-broken-line
