fix(setup): Release branch fix.
Fixing setup.cfg to run semantic-release on master branch.

--- a/setup.cfg
+++ b/setup.cfg
@@ -65,9 +65,10 @@ dev =
     dictdiffer
     mdformat
     python-dateutil
+    
 [semantic_release]
 version_variable=trestle/__init__.py:__version__
-branch = repo-init
+branch = master
 upload_to_pypi = true
 version_source = commit
 
@@ -76,4 +77,3 @@ version_source = commit
 ignore = P1,C812,C813,C814,C815,C816,W503
 max-line-length=120
 exclude = trestle/oscal
-
