--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -8,15 +8,15 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
-
+    needs: build
     steps:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-
-    - name: Python Semantic Release
-      uses: relekang/python-semantic-release@master
-      with:
-        github_token: ${{ secrets.ADMIN_PAT }}
-        pypi_token: ${{ secrets.PYPI_TOKEN }}
-        
+    - name: Create release
+      shell: bash
+      env:
+        PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
+        GH_TOKEN: ${{ secrets.ADMIN_PAT }}
+      run: |
+        make release
