--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -40,4 +40,15 @@ jobs:
       with: 
         token: ${{ secrets.CODECOV_TOKEN }}
         file: ./coverage.xml
-        
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - name: Create release
+        shell: bash
+        env:
+          PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          make release
