fix: Improved stage builds
fix: Improved stage builds
* Reverted semantic release to "hand coded" form.

Signed-off-by: Chris Butler <chris@thebutlers.me>

* Simplified codecov.yml

Signed-off-by: Chris Butler <chris@thebutlers.me>

* Simplified codecov.yml

Signed-off-by: Chris Butler <chris@thebutlers.me>

* Even simplier semantc release

Signed-off-by: Chris Butler <chris@thebutlers.me>

* Updated testing to run checkout and install dev tools

Signed-off-by: Chris Butler <chris@thebutlers.me>

* Updated testing to run checkout and install dev tools

Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -45,10 +45,17 @@ jobs:
     needs: build
     if: github.ref == 'refs/heads/master'
     steps:
-      - name: Create release
-        shell: bash
-        env:
-          PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          make release
+    - uses: actions/checkout@v2
+      with:
+        submodules: true
+        fetch-depth: 0
+    - name: Install build tools
+      run: |
+        make develop
+    - name: Create release
+      shell: bash
+      env:
+        PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        make release
