Updated testing to run checkout and install dev tools
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -60,6 +60,6 @@ jobs:
       shell: bash
       env:
         PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GH_TOKEN: ${{ secrets.ADMIN_PAT }}
       run: |
         make release
