--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ console_scripts =
 
 [options.extras_require]
 dev =
+    attrs~=19.3
     pytest>=5.4.3
     pytest-cov>=2.10.0
     pre-commit>=2.4.0
