fix: fix dependency conflict when running make install
fix install requirements to resolve dependency conflict with attrs

Signed-off-by: Bruno <brunomar@au1.ibm.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ long_description = file: README.md
 [options]
 packages = find:
 install_requires =
+    attrs~=19.3
     mypy
     datamodel-code-generator>=0.5.28
     ilcli
