test: update decomposition rules to new trestle split format
Signed-off-by: Bruno <brunomar@au1.ibm.com>

--- a/test/data/split_merge/.trestle/config.ini
+++ b/test/data/split_merge/.trestle/config.ini
@@ -5,29 +5,29 @@ targets = trestle.oscal.target.Target
 target-control-implementations = trestle.oscal.target.TargetControlImplementation
 
 [catalog]
-decomposition = ['groups[].controls[]']
+decomposition_rules = ['catalog.groups.*.controls.*']
 number_of_groups = 2
 number_of_controls = 2
 
 [profile]
-decomposition = []
+decomposition_rules = []
 
 [target-definition]
-Decomposition = ['targets{}.target-control-implementations[]']
+decomposition_rules = ['target-definition.targets.*.target-control-implementations.*']
 number_of_targets = 2
 number_of_target_control_implementations = 2
 
 [component-definition]
-decomposition = []
+decomposition_rules = []
 
 [system-security-plan]
-decomposition = []
+decomposition_rules = []
 
 [assessment-plan]
-decomposition = []
+decomposition_rules = []
 
 [assessment-result]
-decomposition = []
+decomposition_rules = []
 
 [plan-of-action-and-milestone]
-decomposition = []
+decomposition_rules = []
