feat: add resources from trestle.resources build package
Signed-off-by: Bruno <brunomar@au1.ibm.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,9 +25,13 @@ install_requires =
     pydantic[email]>=1.6.1
     python-dotenv>=0.10.4
 
+[options.package_data]
+trestle.resources = 
+    *.ini
+
 [options.packages.find]
 exclude =
-    test
+    tests
 
 [bdist_wheel]
 universal = 1
