--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,42 +1,40 @@
 repos:
--   repo: https://github.com/pre-commit/mirrors-yapf
+  - repo: https://github.com/pre-commit/mirrors-yapf
     rev: v0.30.0
     hooks:
-    -   id: yapf
+      - id: yapf
         args: [--in-place, --parallel, --recursive, --style, .yapf-config]
-        files: "^(trestle|test)"
+        files: "^(trestle|tests)"
         exclude: "oscal"
         stages: [commit]
--   repo: https://gitlab.com/pycqa/flake8
+  - repo: https://gitlab.com/pycqa/flake8
     rev: 3.8.3
     hooks:
-    -   id: flake8
-        args: [
-          --extend-ignore,
-          "P1,C812,C813,C814,C815,C816,W503"
-        ]
-        additional_dependencies: [
-          flake8-2020,
-          flake8-broken-line,
-          flake8-bugbear,
-          flake8-builtins,
-          flake8-commas,
-          flake8-comprehensions,
-          flake8-docstrings,
-          flake8-eradicate,
-          flake8-import-order,
-          flake8-mutable,
-          flake8-pep3101,
-          flake8-print,
-          flake8-quotes,
-          flake8-string-format,
-          flake8-use-fstring,
-          pep8-naming
-        ]
-        files: "^(trestle|test)"
+      - id: flake8
+        args: [--extend-ignore, "P1,C812,C813,C814,C815,C816,W503"]
+        additional_dependencies:
+          [
+            flake8-2020,
+            flake8-broken-line,
+            flake8-bugbear,
+            flake8-builtins,
+            flake8-commas,
+            flake8-comprehensions,
+            flake8-docstrings,
+            flake8-eradicate,
+            flake8-import-order,
+            flake8-mutable,
+            flake8-pep3101,
+            flake8-print,
+            flake8-quotes,
+            flake8-string-format,
+            flake8-use-fstring,
+            pep8-naming,
+          ]
+        files: "^(trestle|tests)"
         exclude: "oscal"
         stages: [commit]
-- repo: https://github.com/hukkinj1/mdformat
-  rev: 0.1.1  # Use the ref you want to point at
-  hooks:
-  - id: mdformat
+  - repo: https://github.com/hukkinj1/mdformat
+    rev: 0.1.1 # Use the ref you want to point at
+    hooks:
+      - id: mdformat
