Updated to enforce correct version of datamodel code generator
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,6 @@ long_description = file: README.md
 packages = find:
 install_requires =
     mypy
-    datamodel-code-generator>=0.5.28
     ilcli
     pyyaml
     pydantic[email]>=1.6.1
@@ -38,6 +37,7 @@ console_scripts =
 [options.extras_require]
 dev =
     attrs~=19.3
+    datamodel-code-generator[http]==0.5.28
     pytest>=5.4.3
     pytest-cov>=2.10.0
     pre-commit>=2.4.0
