--- a/trestle/resources/config.ini
+++ b/trestle/resources/config.ini
@@ -1,15 +1,15 @@
 [catalog]
 decomposition_rules = ['catalog.groups.*.controls.*']
-number_of_groups = 2
-number_of_controls = 2
+create_number_of_groups = 2
+create_number_of_controls = 2
 
 [profile]
 decomposition_rules = []
 
 [target-definition]
 decomposition_rules = ['target-definition.targets.*.target-control-implementations.*']
-number_of_targets = 2
-number_of_target_control_implementations = 2
+create_number_of_targets = 2
+create_number_of_target_control_implementations = 2
 
 [component-definition]
 decomposition_rules = []
