--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [ 3.7, 3.8]
 
     steps:
