--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ repos:
     hooks:
       - id: yapf
         args: [--in-place, --parallel, --recursive, --style, .yapf-config]
-        files: "^(trestle|tests)"
+        files: "^(trestle|tests|scripts)"
         exclude: "oscal"
         stages: [commit]
   - repo: https://gitlab.com/pycqa/flake8
@@ -31,7 +31,7 @@ repos:
             flake8-use-fstring,
             pep8-naming,
           ]
-        files: "^(trestle|tests)"
+        files: "^(trestle|tests|scripts)"
         exclude: "oscal"
         stages: [commit]
   - repo: https://github.com/hukkinj1/mdformat
