--- a/.github/workflows/python-push.yml
+++ b/.github/workflows/python-push.yml
@@ -1,9 +1,16 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-name: Trestle PR Pipeline
+name: Trestle Deploy
 
-
-on: [pull_request]
+on:
+  push:
+    branches:
+      - master
+      - develop
+  schedule:
+    # Run once per day to ensure we have no build failures due to dependency updates.
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '0 22 * * *'
 
 jobs:
   build:
@@ -41,3 +48,27 @@ jobs:
       with: 
         token: ${{ secrets.CODECOV_TOKEN }}
         file: ./coverage.xml
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/master'
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        submodules: true
+        fetch-depth: 0
+        token: ${{ secrets.ADMIN_PAT }} 
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Install build tools
+      run: |
+        make develop
+    - name: Create release
+      shell: bash
+      env:
+        PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
+        GH_TOKEN: ${{ secrets.ADMIN_PAT }}
+      run: |
+        make release
