--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,7 @@ description = Tools to manage & autogenerate python objects representing the OSC
 author = IBM
 author_email = chris.butler@au1.ibm.com
 license = Apache Software License v2
+url = https://github.com/IBM/compliance-trestle
 classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.7
