Updating setup.cfg to cover windows support and other classifier flags from trove
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,11 +6,16 @@ author = IBM
 author_email = chris.butler@au1.ibm.com
 license = Apache Software License v2
 classifiers =
+    Development Status :: 3 - Alpha
+    Environment :: Console
+    Intended Audience :: Developers
+    Intended Audience :: Information Technology
+    License :: OSI Approved :: Apache Software License
+    Operating System :: POSIX
+    Operating System :: Microsoft
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
-    License :: OSI Approved :: Apache Software License
-    Operating System :: POSIX :: Linux
 long_description_content_type = text/markdown
 long_description = file: README.md
 
@@ -63,7 +68,7 @@ dev =
     flake8-import-order
     flake8-mutable
     flake8-pep3101
-    flake8-print
+    flake8-printg
     flake8-quotes
     flake8-string-format
     flake8-use-fstring
