--- a/setup.cfg
+++ b/setup.cfg
@@ -68,7 +68,7 @@ dev =
     flake8-import-order
     flake8-mutable
     flake8-pep3101
-    flake8-printg
+    flake8-print
     flake8-quotes
     flake8-string-format
     flake8-use-fstring
