--- a/setup.cfg
+++ b/setup.cfg
@@ -7,11 +7,16 @@ author_email = chris.butler@au1.ibm.com
 license = Apache Software License v2
 url = https://github.com/IBM/compliance-trestle
 classifiers =
+    Development Status :: 3 - Alpha
+    Environment :: Console
+    Intended Audience :: Developers
+    Intended Audience :: Information Technology
+    License :: OSI Approved :: Apache Software License
+    Operating System :: POSIX
+    Operating System :: Microsoft
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
-    License :: OSI Approved :: Apache Software License
-    Operating System :: POSIX :: Linux
 long_description_content_type = text/markdown
 long_description = file: README.md
 
