--- a/setup.cfg
+++ b/setup.cfg
@@ -89,3 +89,28 @@ version_source = commit
 ignore = P1,C812,C813,C814,C815,C816,W503
 max-line-length=120
 exclude = trestle/oscal
+
+[mypy]
+plugins = pydantic.mypy
+
+follow_imports = normal
+strict_optional = True
+warn_redundant_casts = True
+warn_unused_ignores = True
+disallow_any_generics = True
+check_untyped_defs = True
+no_implicit_reexport = True
+show_error_codes = True
+show_error_context = True
+allow_valid_type = True
+#disallow_untyped_defs = True
+ 
+[mypy-trestle.oscal.*]
+ignore_errors = True
+
+
+[pydantic-mypy]
+init_forbid_extra = True
+init_typed = True
+warn_required_dynamic_aliases = True
+warn_untyped_fields = True
