--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
     rev: 3.8.3
     hooks:
       - id: flake8
-        args: [--extend-ignore, "P1,C812,C813,C814,C815,C816,W503"]
+        args: [--extend-ignore, "P1,C812,C813,C814,C815,C816,W503,W605"]
         additional_dependencies:
           [
             flake8-2020,
