--- a/tests/data/yaml/bad_target_dup_uuid.yaml
+++ b/tests/data/yaml/bad_target_dup_uuid.yaml
@@ -1,7 +1,7 @@
 target-definition:
   metadata:
     title: Demo target definition for both profiles
-    last-modified: '2020-08-13T17:24:24.389+02:00'
+    last-modified: '2020-08-13T15:24:24.389Z'
     version: '2020813'
     oscal-version: 1.0.0-milestone3
     parties:
@@ -111,7 +111,7 @@ target-definition:
           rel: whe should be using this field too
           media-type: scap_org.open-scap_collection_from_xccdf_ssg-ocp4-xccdf-1.2.xml
         implemented-requirements: []
-      - uuid: ac861221-fff8-4f99-be3a-60eca076c615
+      - uuid: ac861221-fff8-4f99-be3a-60eca076c614
         source: https://github.com/SOME_URL_TO_CIS.json
         description: Compliance Operator SCAP guide for RedHat OpenShift Kubernetes
           Service for CIS v7.1. It includes optional configuration to use with an
