--- a/setup.cfg
+++ b/setup.cfg
@@ -86,6 +86,6 @@ version_source = commit
 
 [flake8]
 # WARNING: This should be kept compatible with .pre-commit-config.yaml
-ignore = P1,C812,C813,C814,C815,C816,W503
+ignore = P1,C812,C813,C814,C815,C816
 max-line-length=120
 exclude = trestle/oscal
