--- a/.github/workflows/python-push.yml
+++ b/.github/workflows/python-push.yml
@@ -40,6 +40,8 @@ jobs:
     - name: Run code linting (flake8)
       run: |
         make code-lint
+    - name: Run code typing check (mypy)
+        make code-typing
     - name: Pytest
       run: |
         make test
