--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -33,6 +33,9 @@ jobs:
     - name: Run code linting (flake8)
       run: |
         make code-lint
+    - name: Run code typing check (mypy)
+      run: |
+        make code-typing
     - name: Pytest
       run: |
         make test
