Partial completion of mypy first pass.
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/python-push.yml
+++ b/.github/workflows/python-push.yml
@@ -41,6 +41,7 @@ jobs:
       run: |
         make code-lint
     - name: Run code typing check (mypy)
+      run: |
         make code-typing
     - name: Pytest
       run: |
