--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,7 +38,7 @@ repos:
     rev: 0.3.3  # Use the ref you want to point at
     hooks:
     - id: mdformat
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: ''
-    hooks:
-    - id: mypy
+  # - repo: https://github.com/pre-commit/mirrors-mypy
+  #   rev: ''
+  #   hooks:
+  #   - id: mypy
