--- a/setup.cfg
+++ b/setup.cfg
@@ -77,6 +77,7 @@ dev =
     dictdiffer
     mdformat
     python-dateutil
+    mypy
     
 [semantic_release]
 version_variable=trestle/__init__.py:__version__
