--- a/.github/workflows/python-push.yml
+++ b/.github/workflows/python-push.yml
@@ -31,6 +31,9 @@ jobs:
     - name: Install build tools
       run: |
         make develop
+    - name: Setup pre-commit
+      run: |
+        make pre-commit
     - name: Install dependencies
       run: |
         make install
