--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -24,6 +24,9 @@ jobs:
     - name: Install build tools
       run: |
         make develop
+    - name: Setup pre-commit
+      run: |
+        make pre-commit
     - name: Install dependencies
       run: |
         make install
