Altered cicd to be permissive
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/python-push.yml
+++ b/.github/workflows/python-push.yml
@@ -44,6 +44,7 @@ jobs:
       run: |
         make code-lint
     - name: Run code typing check (mypy)
+      continue-on-error: true 
       run: |
         make code-typing
     - name: Pytest
