--- a/setup.cfg
+++ b/setup.cfg
@@ -103,8 +103,8 @@ check_untyped_defs = True
 no_implicit_reexport = True
 show_error_codes = True
 show_error_context = True
-disallow-untyped-calls = True
-disallow_untyped_defs = True
+# disallow-untyped-calls = True
+# disallow_untyped_defs = True
  
 [mypy-trestle.oscal.*]
 ignore_errors = True
