Updated mypy conf to be a balanced severity
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/setup.cfg
+++ b/setup.cfg
@@ -104,8 +104,8 @@ no_implicit_reexport = True
 show_error_codes = True
 show_error_context = True
 # disallow-untyped-calls = True
-# disallow_untyped_defs = True
- 
+disallow_untyped_defs = True
+
 [mypy-trestle.oscal.*]
 ignore_errors = True
 
