feature: introducing mandatory mypy typing. (#174)
* Basic mypy setup

Signed-off-by: Chris Butler <chris@thebutlers.me>

* Added code typing support to build pipeline checks

Signed-off-by: Chris Butler <chris@thebutlers.me>

* Partial completion of mypy first pass.

Signed-off-by: Chris Butler <chris@thebutlers.me>

* Updated get_stripped_contextual_model

Signed-off-by: Chris Butler <chris@thebutlers.me>

* Partial update towards zero mypy errors

Signed-off-by: Chris Butler <chris@thebutlers.me>

* updates

Signed-off-by: Chris Butler <chris@thebutlers.me>

* Altered cicd to be permissive

Signed-off-by: Chris Butler <chris@thebutlers.me>

* Altered cicd to be permissive

Signed-off-by: Chris Butler <chris@thebutlers.me>

* Fixed UT's related to split

Signed-off-by: Chris Butler <chris@thebutlers.me>

* Updated mypy conf to be a balanced severity

Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -36,6 +36,10 @@ jobs:
     - name: Run code linting (flake8)
       run: |
         make code-lint
+    - name: Run code typing check (mypy)
+      continue-on-error: true
+      run: |
+        make code-typing
     - name: Pytest
       run: |
         make test
