--- a/.github/workflows/python-push.yml
+++ b/.github/workflows/python-push.yml
@@ -55,18 +55,19 @@ jobs:
       with: 
         token: ${{ secrets.CODECOV_TOKEN }}
         file: ./coverage.xml
-  deploy:
+  deploy-docs:
     runs-on: ubuntu-latest
-    needs: build
-    if: github.ref == 'refs/heads/master'
+    needs: deploy
+    # Temporary hack: allow develop as well as master to deploy docs.
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop'
     steps:
     - uses: actions/checkout@v2
       with:
         submodules: true
         fetch-depth: 0
-        token: ${{ secrets.ADMIN_PAT }} 
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
+      # This is deliberately not using a custom credential as it relies on native github actions token to have push rights.
       with:
         python-version: 3.7
     - name: Install build tools
@@ -74,8 +75,5 @@ jobs:
         make develop
     - name: Create release
       shell: bash
-      env:
-        PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
-        GH_TOKEN: ${{ secrets.ADMIN_PAT }}
       run: |
-        make release
+        mkdocs gh-deploy
