--- a/setup.cfg
+++ b/setup.cfg
@@ -78,6 +78,12 @@ dev =
     mdformat
     python-dateutil
     mypy
+    # Docs website
+    mkdocs
+    mkdocstrings
+    mkdocs-material
+    markdown-include
+    pymdown-extensions
     
 [semantic_release]
 version_variable=trestle/__init__.py:__version__
