--- a/.github/workflows/python-push.yml
+++ b/.github/workflows/python-push.yml
@@ -55,6 +55,31 @@ jobs:
       with: 
         token: ${{ secrets.CODECOV_TOKEN }}
         file: ./coverage.xml
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/master'
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        submodules: true
+        fetch-depth: 0
+        token: ${{ secrets.ADMIN_PAT }} 
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Install build tools
+      run: |
+        make develop
+    - name: Create release
+      shell: bash
+      env:
+        PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
+        GH_TOKEN: ${{ secrets.ADMIN_PAT }}
+      run: |
+        make release
+
   deploy-docs:
     runs-on: ubuntu-latest
     needs: deploy
