--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,7 +38,7 @@ repos:
     rev: 0.5.3  # Use the ref you want to point at
     hooks:
     - id: mdformat
-      exclude: "CHANGELOG.md"
+      exclude: "CHANGELOG.md|new_collaborator.md"
       
   # - repo: https://github.com/pre-commit/mirrors-mypy
   #   rev: ''
