feature (remote): added furl to setup requirements and began Github fetch...

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ install_requires =
     mypy
     ilcli
     pyyaml
+    furl
     pydantic[email]>=1.6.1
     python-dotenv>=0.10.4
     datamodel-code-generator[http]==0.5.28
