--- a/tests/data/tasks/osco/demo-osco-to-oscal.config
+++ b/tests/data/tasks/osco/demo-osco-to-oscal.config
@@ -1,5 +1,5 @@
 [task.osco-to-oscal]
 
-input-dir =  /home/degenaro/git/degenaro.evidence-locker/osco/input
-output-dir = /home/degenaro/git/degenaro.evidence-locker/osco/output
+input-dir =  tests/data/tasks/osco/input
+output-dir = tests/data/tasks/osco/runtime
 output-overwrite = true
