Start using latest version of datamodel-generator

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ install_requires =
     pyyaml
     pydantic[email]>=1.6.1
     python-dotenv>=0.10.4
-    datamodel-code-generator[http]==0.5.28
+    datamodel-code-generator[http]
 
 [options.package_data]
 trestle.resources = 
