--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,6 +38,7 @@ repos:
     rev: 0.5.3  # Use the ref you want to point at
     hooks:
     - id: mdformat
+      additional_dependencies: [mdformat-gfm]
       exclude: "CHANGELOG.md|new_collaborator.md"
       
   # - repo: https://github.com/pre-commit/mirrors-mypy
