Use example IP address "111.222.333.444" and example company "mycorp".
Signed-off-by: Lou Degenaro <degenaro@us.ibm.com>

--- a/tests/data/tasks/osco/input/oscal-metadata.yaml
+++ b/tests/data/tasks/osco/input/oscal-metadata.yaml
@@ -1,6 +1,6 @@
  
-ssg-ocp4-ds-cis-10.221.139.104-pod:
-   locker: https://github.ibm.com/degenaro/evidence-locker
+ssg-ocp4-ds-cis-111.222.333.444-pod:
+   locker: https://github.mycorp.com/degenaro/evidence-locker
    namespace: xccdf
    subject-references:
       component:
@@ -12,13 +12,13 @@ ssg-ocp4-ds-cis-10.221.139.104-pod:
          type: inventory-item
          title: Pod
          properties:
-            target: kube-br7qsa3d0vceu2so1a90-roksopensca-default-0000026b.iks.ibm
+            target: kube-br7qsa3d0vceu2so1a90-roksopensca-default-0000026b.iks.mycorp
             cluster-name: ROKS-OpenSCAP-1
             cluster-type: openshift
             cluster-region: us-south
                     
-ssg-rhel7-ds-cis-10.221.139.104-pod:
-   locker: https://github.ibm.com/degenaro/evidence-locker
+ssg-rhel7-ds-cis-111.222.333.444-pod:
+   locker: https://github.mycorp.com/degenaro/evidence-locker
    namespace: xccdf
    subject-references:
       component:
@@ -30,7 +30,7 @@ ssg-rhel7-ds-cis-10.221.139.104-pod:
          type: inventory-item
          title: VM
          properties:
-            target: kube-br7qsa3d0vceu2so1a90-roksopensca-default-0000026b.iks.ibm
+            target: kube-br7qsa3d0vceu2so1a90-roksopensca-default-0000026b.iks.mycorp
             cluster-name: ROKS-OpenSCAP-1
             cluster-type: openshift
             cluster-region: us-south
