--- a/tests/data/tasks/osco/input/ssg-ocp4-ds-cis-111.222.333.444-pod.yaml
+++ b/tests/data/tasks/osco/input/ssg-ocp4-ds-cis-111.222.333.444-pod.yaml
@@ -7,7 +7,7 @@ data:
               <benchmark href="/content/ssg-ocp4-ds.xml" id="xccdf_org.ssgproject.content_benchmark_OCP-4"/>
               <title>OSCAP Scan Result</title>
               <profile idref="xccdf_org.ssgproject.content_profile_cis"/>
-              <target>kube-br7qsa3d0vceu2so1a90-roksopensca-default-0000026b.iks.ibm</target>
+              <target>kube-br7qsa3d0vceu2so1a90-roksopensca-default-0000026b.iks.mycorp</target>
               <target-facts>
                 <fact name="urn:xccdf:fact:identifier" type="string">chroot:///host</fact>
                 <fact name="urn:xccdf:fact:scanner:name" type="string">OpenSCAP</fact>
@@ -678,12 +678,12 @@ metadata:
     compliance-remediations/processed: ""
     compliance.openshift.io/scan-error-msg: ""
     compliance.openshift.io/scan-result: NON-COMPLIANT
-    openscap-scan-result/node: 10.221.139.104
+    openscap-scan-result/node: 111.222.333.444
   creationTimestamp: "2020-08-03T02:26:34Z"
   labels:
     compliance-scan: ssg-ocp4-ds-cis
-  name: ssg-ocp4-ds-cis-10.221.139.104-pod
+  name: ssg-ocp4-ds-cis-111.222.333.444-pod
   namespace: openshift-compliance
   resourceVersion: "22693328"
-  selfLink: /api/v1/namespaces/openshift-compliance/configmaps/ssg-ocp4-ds-cis-10.221.139.104-pod
+  selfLink: /api/v1/namespaces/openshift-compliance/configmaps/ssg-ocp4-ds-cis-111.222.333.444-pod
   uid: 1da3ea81-0a25-4512-ad86-7ac360246b5d
