Added pytest-random-order to dependencies.
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/setup.cfg
+++ b/setup.cfg
@@ -75,6 +75,7 @@ dev =
     flake8-string-format
     flake8-use-fstring
     pep8-naming
+    pytest-random-order
     dictdiffer
     mdformat
     python-dateutil
