Corrected semantic release behaviour.
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/setup.cfg
+++ b/setup.cfg
@@ -83,7 +83,7 @@ dev =
     
 [semantic_release]
 version_variable=trestle/__init__.py:__version__
-branch = master
+branch = main
 upload_to_pypi = true
 version_source = commit
 
