--- a/.github/workflows/python-push.yml
+++ b/.github/workflows/python-push.yml
@@ -79,3 +79,16 @@ jobs:
         GH_TOKEN: ${{ secrets.ADMIN_PAT }}
       run: |
         make release
+  merge-master-to-develop:
+    name: Merge master -> develop
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/main'
+    steps:
+      uses: tukasz/direct-merge-action@master
+      with:
+        GITHUB_TOKEN: ${{ secrets.ADMIN_PAT }}
+        source-branch: master
+        target-branch: develop
+        commit-message: "chore: Merge back version tags and changelog into develop."
+
