--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,91 +1,101 @@
-site_name: "Compliance Trestle"
-site_description: "Documentation for compliance-trestle package."
-site_url: "https://compliance-trestle.github.io"
-repo_url: "https://github.com/IBM/compliance-trestle"
-repo_name: "IBM/compliance-trestle"
-
+extra_css:
+- css/extra.css
+markdown_extensions:
+- admonition
+- markdown_include.include
+- pymdownx.emoji
+- pymdownx.magiclink
+- pymdownx.superfences
+- pymdownx.tabbed
+- pymdownx.tasklist
+- toc:
+    permalink: "\xA4"
 nav:
-  - Overview: index.md
-  - Trestle commands: commands.md
-  - Code of Conduct: mkdocs_code_of_conduct.md
-  - Contributing:
-      - Overview: contributing/mkdocs_contributing.md
-  - Reference:
-    - Overview: api_reference/overview.md
-    - core:
-      - base_model: api_reference/core/base_model.md
-      - const: api_reference/core/const.md
-      - duplicates_validator: api_reference/core/duplicates_validator.md
-      - err: api_reference/core/err.md
-      - generators: api_reference/core/generators.md
-      - object_factory: api_reference/core/object_factory.md
-      - parser: api_reference/core/parser.md
-      - utils: api_reference/core/utils.md
-      - validator_factory: api_reference/core/validator_factory.md
-      - validator_helper: api_reference/core/validator_helper.md
-      - commands: api_reference/core/commands/commands.md
-      - models:
-        - actions: api_reference/core/models/actions.md
-        - elements: api_reference/core/models/elements.md
-        - file_content_type: api_reference/core/models/file_content_type.md
-        - interfaces: api_reference/core/models/interfaces.md
-        - plans: api_reference/core/models/plans.md
-    - oscal:
-      - Catalog: api_reference/oscal/catalog.md
-      - Profile: api_reference/oscal/catalog.md
-      - Component: api_reference/oscal/component.md
-      - Target (Trestle defined): api_reference/oscal/target.md
-      - System Security Plan: api_reference/oscal/ssp.md
-      - System Assessment Plan: api_reference/oscal/sap.md
-      - System Assessment Results: api_reference/oscal/sar.md
-      - Plan of action & Milestones: api_reference/oscal/poam.md
+- Overview: index.md
+- Trestle cli: cli.md
+- Code of Conduct: mkdocs_code_of_conduct.md
+- Contributing:
+  - Overview: contributing/mkdocs_contributing.md
+  - Contributors: https://github.com/IBM/compliance-trestle/graphs/contributors
+  - Maintainers: maintainers.md
+  - documentation website: contributing/website.md
+- Reference:
+  - Overview: api_reference/overview.md
+  - trestle:
     - tasks:
-      - base_task: api_reference/tasks/base_task.md
-      - transform: api_reference/tasks/transform.md
+      - base_task: api_reference/trestle.tasks.base_task.md
+      - transform: api_reference/trestle.tasks.transform.md
+    - core:
+      - validator_helper: api_reference/trestle.core.validator_helper.md
+      - models:
+        - interfaces: api_reference/trestle.core.models.interfaces.md
+        - elements: api_reference/trestle.core.models.elements.md
+        - actions: api_reference/trestle.core.models.actions.md
+        - plans: api_reference/trestle.core.models.plans.md
+        - file_content_type: api_reference/trestle.core.models.file_content_type.md
+      - base_model: api_reference/trestle.core.base_model.md
+      - duplicates_validator: api_reference/trestle.core.duplicates_validator.md
+      - generators: api_reference/trestle.core.generators.md
+      - parser: api_reference/trestle.core.parser.md
+      - utils: api_reference/trestle.core.utils.md
+      - commands:
+        - task: api_reference/trestle.core.commands.task.md
+        - merge: api_reference/trestle.core.commands.merge.md
+        - cmd_utils: api_reference/trestle.core.commands.cmd_utils.md
+        - add: api_reference/trestle.core.commands.add.md
+        - create: api_reference/trestle.core.commands.create.md
+        - replicate: api_reference/trestle.core.commands.replicate.md
+        - remove: api_reference/trestle.core.commands.remove.md
+        - assemble: api_reference/trestle.core.commands.assemble.md
+        - validate: api_reference/trestle.core.commands.validate.md
+        - split: api_reference/trestle.core.commands.split.md
+        - import_: api_reference/trestle.core.commands.import_.md
+        - init: api_reference/trestle.core.commands.init.md
+      - object_factory: api_reference/trestle.core.object_factory.md
+      - err: api_reference/trestle.core.err.md
+      - const: api_reference/trestle.core.const.md
+      - validator_factory: api_reference/trestle.core.validator_factory.md
     - utils:
-      - fs: api_reference/utils/fs.md
-      - log: api_reference/utils/log.md
-      - trash: api_reference/utils/trash.md
-
-
+      - log: api_reference/trestle.utils.log.md
+      - load_distributed: api_reference/trestle.utils.load_distributed.md
+      - trash: api_reference/trestle.utils.trash.md
+      - fs: api_reference/trestle.utils.fs.md
+    - oscal:
+      - catalog: api_reference/trestle.oscal.catalog.md
+      - poam: api_reference/trestle.oscal.poam.md
+      - profile: api_reference/trestle.oscal.profile.md
+      - assessment_results: api_reference/trestle.oscal.assessment_results.md
+      - target: api_reference/trestle.oscal.target.md
+      - ssp: api_reference/trestle.oscal.ssp.md
+      - component: api_reference/trestle.oscal.component.md
+      - assessment_plan: api_reference/trestle.oscal.assessment_plan.md
+    - cli: api_reference/trestle.cli.md
+plugins:
+- search
+- mkdocstrings:
+    handlers:
+      python:
+        rendering:
+          group_by_category: true
+          show_category_heading: true
+          show_if_no_docstring: true
+          show_root_heading: true
+        selection:
+          filters:
+          - '!^_[^_]'
+          - '!^__json'
+          - '!^__config__'
+          new_path_syntax: true
+    watch:
+    - trestle
+repo_name: IBM/compliance-trestle
+repo_url: https://github.com/IBM/compliance-trestle
+site_description: Documentation for compliance-trestle package.
+site_name: Compliance Trestle
+site_url: https://compliance-trestle.github.io
 theme:
   name: material
   palette:
-    scheme: slate
-    primary: teal
     accent: purple
-
-
-
-markdown_extensions:
-  - admonition
-  - markdown_include.include
-  - pymdownx.emoji
-  - pymdownx.magiclink
-  - pymdownx.superfences
-  - pymdownx.tabbed
-  - pymdownx.tasklist
-  - toc:
-      permalink: "¤"
-
-plugins:
-  - search
-  - mkdocstrings:
-      handlers:
-        python:
-          selection:
-            new_path_syntax: yes
-            filters:
-              - "!^_[^_]"
-              - "!^__json"
-              - "!^__config__"
-          rendering:
-            show_root_heading: True
-            show_category_heading: True
-            show_if_no_docstring: True
-            group_by_category: True
-
-      watch:
-        - trestle
-extra_css:
-  - css/extra.css
+    primary: teal
+    scheme: slate
