--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ install_requires =
     attrs~=19.3
     mypy
     ilcli
+    paramiko
     pyyaml
     pydantic[email]>=1.6.1
     python-dotenv>=0.10.4
