--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,8 +38,11 @@ repos:
     rev: 0.5.4  # Use the ref you want to point at
     hooks:
     - id: mdformat
-      additional_dependencies: [mdformat-gfm]
-      exclude: "CHANGELOG.md|new_collaborator.md"
+      exclude: "CHANGELOG.md|docs/mkdocs_code_of_conduct.md|docs/api_reference"
+      additional_dependencies:
+      - mdformat-tables
+      - mdformat-config
+
       
   # - repo: https://github.com/pre-commit/mirrors-mypy
   #   rev: ''
