--- a/.github/workflows/python-push.yml
+++ b/.github/workflows/python-push.yml
@@ -104,8 +104,8 @@ jobs:
       run: |
         mkdocs gh-deploy
 
-  merge-master-to-develop:
-    name: Merge master -> develop
+  merge-main-to-develop:
+    name: Merge main -> develop
     runs-on: ubuntu-latest
     needs: deploy
     if: github.ref == 'refs/heads/main'
@@ -113,7 +113,7 @@ jobs:
     - uses: tukasz/direct-merge-action@master
       with:
         GITHUB_TOKEN: ${{ secrets.ADMIN_PAT }}
-        source-branch: master
+        source-branch: main
         target-branch: develop
         commit-message: "chore: Merge back version tags and changelog into develop."
 
