Corrected errors in the documentation website content and added new check of website content.
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/python-push.yml
+++ b/.github/workflows/python-push.yml
@@ -47,6 +47,9 @@ jobs:
       continue-on-error: true 
       run: |
         make code-typing
+    - name: Validate website content (mkdocs)
+      run: |
+        make docs-validate
     - name: Pytest
       run: |
         make test
