--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -40,6 +40,9 @@ jobs:
       continue-on-error: true
       run: |
         make code-typing
+    - name: Validate website content (mkdocs)
+      run: |
+        make docs-validate
     - name: Pytest
       run: |
         make test
