Enforce oscal version in models and tests
Now enforce oscal version defined in one place.  Many changes to tests and data.

--- a/tests/data/yaml/bad_target_no_tz.yaml
+++ b/tests/data/yaml/bad_target_no_tz.yaml
@@ -1,7 +1,7 @@
 target-definition:
   metadata:
     last-modified: '2020-08-13T15:24:24.389'
-    oscal-version: 1.0.0-milestone3
+    oscal-version: 1.0.0-rc1
     parties:
     - name: International Business Machines
       type: organization
