Fix: Dependency issues
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,8 +24,6 @@ long_description = file: README.md
 [options]
 packages = find:
 install_requires =
-    attrs~=19.3
-    mypy
     ilcli
     paramiko
     pyyaml
@@ -51,13 +49,11 @@ console_scripts =
 
 [options.extras_require]
 dev =
-    attrs~=19.3
     pytest>=5.4.3
     pytest-cov>=2.10.0
     pre-commit>=2.4.0
     setuptools
     wheel
-    pip
     yapf
     python-semantic-release
     flake8
@@ -79,11 +75,9 @@ dev =
     pep8-naming
     pytest-random-order
     dictdiffer
-    mdformat
-    mdformat-gfm
     python-dateutil
     mypy
-    # Docs website
+    # # Docs website
     mkdocs
     mkdocstrings
     mkdocs-material
