--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ install_requires =
     paramiko
     pyyaml
     furl
-    pydantic[email]==1.7.* # Temporary fix see issue #381
+    pydantic[email]>=1.8.1
     python-dotenv>=0.10.4
     datamodel-code-generator[http]
 
