docs: Call out restriction in changes
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,7 +35,7 @@ repos:
         exclude: "oscal"
         stages: [commit]
   - repo: https://github.com/hukkinj1/mdformat
-    rev: 0.5.3  # Use the ref you want to point at
+    rev: 0.5.3  # Do not change version. 0.6.0 introduces breaking changes.
     hooks:
     - id: mdformat
       exclude: "CHANGELOG.md|docs/mkdocs_code_of_conduct.md|docs/api_reference"
