--- a/tests/data/tasks/osco/input/oscal-metadata.yaml
+++ b/tests/data/tasks/osco/input/oscal-metadata.yaml
@@ -2,6 +2,7 @@
 ssg-ocp4-ds-cis-111.222.333.444-pod:
    locker: https://github.mycorp.com/degenaro/evidence-locker
    namespace: xccdf
+   benchmark: CIS Kubernetes Benchmark
    subject-references:
       component:
          uuid-ref: 56666738-0f9a-4e38-9aac-c0fad00a5821
@@ -13,6 +14,7 @@ ssg-ocp4-ds-cis-111.222.333.444-pod:
          title: Pod
          properties:
             target: kube-br7qsa3d0vceu2so1a90-roksopensca-default-0000026b.iks.mycorp
+            target-ip: 111.222.333.444
             cluster-name: ROKS-OpenSCAP-1
             cluster-type: openshift
             cluster-region: us-south
@@ -20,6 +22,7 @@ ssg-ocp4-ds-cis-111.222.333.444-pod:
 ssg-rhel7-ds-cis-111.222.333.444-pod:
    locker: https://github.mycorp.com/degenaro/evidence-locker
    namespace: xccdf
+   benchmark: CIS Kubernetes Benchmark
    subject-references:
       component:
          uuid-ref: 89cfe7a7-ce6b-4699-aa7b-2f5739c72001
@@ -31,6 +34,7 @@ ssg-rhel7-ds-cis-111.222.333.444-pod:
          title: VM
          properties:
             target: kube-br7qsa3d0vceu2so1a90-roksopensca-default-0000026b.iks.mycorp
+            target-ip: 111.222.333.444
             cluster-name: ROKS-OpenSCAP-1
             cluster-type: openshift
             cluster-region: us-south
