--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ long_description = file: README.md
 [options]
 packages = find:
 install_requires =
+    attrs~=19.3
     ilcli
     paramiko
     pyyaml
@@ -31,6 +32,8 @@ install_requires =
     pydantic[email]==1.7.* # Temporary fix see issue #381
     python-dotenv>=0.10.4
     datamodel-code-generator[http]
+    python-frontmatter
+    mistune==2.0.*
 
 [options.package_data]
 trestle.resources = 
