--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,9 @@ markdown_extensions:
 nav:
 - Overview: index.md
 - Trestle cli: cli.md
+- Tutorials:
+  - transformer construction: tutorials/task.transformer-construction/transformer-construction.md
+  - task tanium-to-oscal: tutorials/task.tanuim-to-oscal/transformation.md
 - Code of Conduct: mkdocs_code_of_conduct.md
 - Contributing:
   - Overview: contributing/mkdocs_contributing.md
