--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+.settings
+.project
+.pydevproject
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
 venv
