fix:Correct dependency issues.
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,7 @@ install_requires =
     python-dotenv>=0.10.4
     datamodel-code-generator[http]
     python-frontmatter
-    mistune==2.0.*
+    mistune==2.0.0rc1 # Review regularly.
 
 [options.package_data]
 trestle.resources = 
