chore: Adjust codecov to allow for some wiggle room.
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/codecov.yml
+++ b/codecov.yml
@@ -5,6 +5,9 @@
 coverage:
   range: "80...100"
   status:
+    patch:
+      trestle:
+        target: 80%
     project:
       trestle: # This can be anything, but it needs to exist as the name
         # basic settings
