--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
       - id: yapf
         args: [--in-place, --parallel, --recursive, --style, .yapf-config]
         files: "^(trestle|tests|scripts)"
-        exclude: "oscal"
+        exclude: "(oscal|third_party)"
         stages: [commit]
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.8.4
@@ -32,7 +32,7 @@ repos:
             pep8-naming,
           ]
         files: "^(trestle|tests|scripts)"
-        exclude: "oscal"
+        exclude: "(oscal|third_party)"
         stages: [commit]
   - repo: https://github.com/hukkinj1/mdformat
     rev: 0.5.3  # Do not change version. 0.6.0 introduces breaking changes.
