--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -116,6 +116,6 @@ theme:
     accent: purple
     primary: teal
     scheme: slate
-google-analytics:
+google_analytics:
   - G-XT3KGMHSY8
   - auto
