--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,8 @@ install_requires =
     datamodel-code-generator[http]
     python-frontmatter
     mistune==2.0.0rc1 # Review regularly.
+    pywin32 >= 1.0;platform_system=='Windows'
+
 
 [options.package_data]
 trestle.resources = 
