multiple changes for latest nist - some tests still fail
Signed-off-by: FrankSuits <frankst@au1.ibm.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ install_requires =
     furl
     pydantic[email]>=1.8.1
     python-dotenv>=0.10.4
-    datamodel-code-generator[http]
+    datamodel-code-generator[http]==0.9.1
 
 [options.package_data]
 trestle.resources = 
