--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,15 +38,8 @@ repos:
     rev: 0.7.1 # Do not change version. 0.6.0 introduces breaking changes.
     hooks:
     - id: mdformat
-      exclude: "CHANGELOG.md|docs/mkdocs_code_of_conduct.md|docs/api_reference"
+      exclude: "CHANGELOG.md|docs/mkdocs_code_of_conduct.md|docs/api_reference|tests/data/md"
       additional_dependencies:
       - mdformat-tables
       - mdformat-config
       - mdformat-frontmatter
-
-      
-  # - repo: https://github.com/pre-commit/mirrors-mypy
-  #   rev: ''
-  #   hooks:
-  #   - id: mypy
-
