Constrain markupsafe to the correct version
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,6 @@ install_requires =
     mistune==2.0.0rc1 # Review regularly.
     pywin32 >= 1.0;platform_system=='Windows'
 
-
 [options.package_data]
 trestle.resources = 
     *.ini
@@ -71,6 +70,8 @@ dev =
     mkdocs-material
     markdown-include
     pymdown-extensions
+    ## Constrain system 
+    MarkupSafe<2.0.0
     
 [semantic_release]
 version_variable=trestle/__init__.py:__version__
