chore: DevOps automation for PRs
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/trestle-develop-automerge.yml
+++ b/.github/workflows/trestle-develop-automerge.yml
@@ -4,7 +4,7 @@ on:
   # Try enabling auto-merge for all open pull requests. (Only recommended for testing.)
   pull_request:
     branches:
-      - main
+      - develop
   # Try enabling auto-merge for all open pull requests.
   schedule:
     - cron: 0 * * * *
