chore: change versions
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/trestle-main-automerge.yml
+++ b/.github/workflows/trestle-main-automerge.yml
@@ -33,7 +33,7 @@ jobs:
   automerge:
     runs-on: ubuntu-latest
     steps:
-      - uses: reitermarkus/automerge@latest
+      - uses: reitermarkus/automerge@v1
         with:
           token: ${{ secrets.ADMIN_PAT }}
           merge-method: merge
