Experiment with pr helper
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/trestle-develop-automerge.yml
+++ b/.github/workflows/trestle-develop-automerge.yml
@@ -20,7 +20,7 @@ jobs:
       id: runprhelper
       uses: Matticusau/pr-helper@v1.2.6
       with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        repo-token: ${{ secrets.ADMIN_PAT }}
         enable-prmerge-automation: true
         enable-prcomment-automation: t
         enable-prlabel-automation: true
